--- a/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/Gaeste.fxml
+++ b/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/Gaeste.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -18,6 +19,9 @@
         <Button layoutX="33.0" layoutY="461.0" mnemonicParsing="false" onAction="#onClickAddGuest" prefHeight="29.0" prefWidth="94.0" style="-fx-cursor: HAND;" styleClass="dashboard-btn" text="Add Gast" />
         <Button layoutX="589.0" layoutY="461.0" mnemonicParsing="false" onAction="#onClickDeleteGuest" prefHeight="29.0" prefWidth="94.0" styleClass="cancel-btn" text="Delete" />
       <Button layoutX="157.0" layoutY="461.0" mnemonicParsing="false" onAction="#onClickEditGast" prefHeight="29.0" prefWidth="94.0" style="-fx-cursor: HAND;" styleClass="dashboard-btn" text="Edit Gast" />
-      <Label fx:id="errorLabel" alignment="CENTER" layoutX="204.0" layoutY="31.0" prefHeight="18.0" prefWidth="296.0" textFill="RED" />
+      <Label fx:id="errorLabel" alignment="CENTER" layoutX="108.0" layoutY="31.0" prefHeight="18.0" prefWidth="296.0" textFill="RED" />
+      <Button layoutX="589.0" layoutY="25.0" mnemonicParsing="false" onAction="#onClickSuchGastNachEmail" prefHeight="29.0" prefWidth="94.0" style="-fx-cursor: HAND;" styleClass="dashboard-btn" text="Suchen" />
+      <TextField fx:id="emailSearchTxtField" layoutX="414.0" layoutY="24.0" prefHeight="29.0" prefWidth="164.0" promptText="Email" styleClass="input" />
+      <Button layoutX="282.0" layoutY="461.0" mnemonicParsing="false" onAction="#onClickRefreshListview" prefHeight="30.0" prefWidth="171.0" style="-fx-cursor: HAND;" styleClass="dashboard-btn" text="Listview aktualisieren" />
     </children>
 </AnchorPane>
